# RouteLLM

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: models.yaml
docs/: AGENT_NATIVE_SETUP.md  IMPLEMENTATION_PLAN.md
docs/adr/: ADR-001-policy-driven-routing.md  ADR-002-agent-native-control-plane.md
evals/datasets/: benchmark_requests.json
infra/prometheus/: prometheus.yml
src/routellm/: __init__.py  cli.py  config.py  dashboard.py  main.py
src/routellm/adapters/: __init__.py  anthropic.py  base.py  gemini.py  hosted.py  http.py  mock.py  ollama.py  openai_compatible.py  vllm.py
src/routellm/agent_native/: __init__.py  mcp_server.py  policy.py
src/routellm/api/: __init__.py  routes.py
src/routellm/db/: __init__.py  base.py  models.py  session.py  setup.py
src/routellm/evals/: comparison.py  dataset_loader.py  paths.py  replay.py
src/routellm/observability/: __init__.py  (+2 more)
tests/: test_agent_native_policy.py  test_analytics.py  test_analytics_api.py  test_app_boot.py  test_budget.py  test_budget_snapshot.py  test_chat_completions.py  test_config.py  test_decision_detail.py  test_decisions.py  test_escalation.py  test_evaluation.py  test_health.py  test_metrics.py  test_model_health.py  test_model_registry.py  test_native_provider_adapters.py  test_ollama_runtime.py  test_openai_compatible_adapter.py  test_policies.py  test_policy_upsert.py  test_replay_endpoint.py  test_replay_runner.py  test_response_evaluator.py  test_route_execution.py  test_semantic_routing.py  test_transport_failover.py  test_workflow.py
(+30 files in other folders)
